--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -132,19 +132,19 @@ jobs:
       mkdir -p MultiBUGS-binary/Gtk2/Code
       mkdir -p MultiBUGS-binary/Code
       mkdir -p MultiBUGS-binary/Cons
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Form/Code/*.ocf MultiBUGS-binary/Form/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Host/Code/*.ocf MultiBUGS-binary/Host/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Lin/Code/*.ocf MultiBUGS-binary/Lin/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Ole/Code/*.ocf MultiBUGS-binary/Ole/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Std/Code/*.ocf MultiBUGS-binary/Std/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/System/Code/*.ocf MultiBUGS-binary/System/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Text/Code/*.ocf MultiBUGS-binary/Text/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Win/Code/*.ocf MultiBUGS-binary/Win/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Xhtml/Code/*.ocf MultiBUGS-binary/Xhtml/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Dev2/Code/*.ocf MultiBUGS-binary/Dev2/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Gtk2/Code/*.ocf MultiBUGS-binary/Gtk2/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Code/*.ocf MultiBUGS-binary/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcp/BlackBox/Cons/*.ocf MultiBUGS-binary/Cons
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Form/Code/*.ocf MultiBUGS-binary/Form/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Host/Code/*.ocf MultiBUGS-binary/Host/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Lin/Code/*.ocf MultiBUGS-binary/Lin/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Ole/Code/*.ocf MultiBUGS-binary/Ole/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Std/Code/*.ocf MultiBUGS-binary/Std/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/System/Code/*.ocf MultiBUGS-binary/System/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Text/Code/*.ocf MultiBUGS-binary/Text/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Win/Code/*.ocf MultiBUGS-binary/Win/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Xhtml/Code/*.ocf MultiBUGS-binary/Xhtml/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Dev2/Code/*.ocf MultiBUGS-binary/Dev2/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Gtk2/Code/*.ocf MultiBUGS-binary/Gtk2/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Code/*.ocf MultiBUGS-binary/Code
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Cons/*.ocf MultiBUGS-binary/Cons
       cp -r Form/Code/*.ocf MultiBUGS-binary/Form/Code
       cp -r Host/Code/*.ocf MultiBUGS-binary/Host/Code
       cp -r Lin/Code/*.ocf MultiBUGS-binary/Lin/Code
