--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -134,25 +134,25 @@ jobs:
       mkdir -p MultiBUGS-binary/Cons
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Form/Code/*.ocf MultiBUGS-binary/Form/Code
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Host/Code/*.ocf MultiBUGS-binary/Host/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Lin/Code/*.ocf MultiBUGS-binary/Lin/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Ole/Code/*.ocf MultiBUGS-binary/Ole/Code
+      #cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Lin/Code/*.ocf MultiBUGS-binary/Lin/Code
+      #cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Ole/Code/*.ocf MultiBUGS-binary/Ole/Code
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Std/Code/*.ocf MultiBUGS-binary/Std/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/System/Code/*.ocf MultiBUGS-binary/System/Code
+      #cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/System/Code/*.ocf MultiBUGS-binary/System/Code
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Text/Code/*.ocf MultiBUGS-binary/Text/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Win/Code/*.ocf MultiBUGS-binary/Win/Code
+      #cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Win/Code/*.ocf MultiBUGS-binary/Win/Code
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Xhtml/Code/*.ocf MultiBUGS-binary/Xhtml/Code
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Dev2/Code/*.ocf MultiBUGS-binary/Dev2/Code
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Gtk2/Code/*.ocf MultiBUGS-binary/Gtk2/Code
       cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Code/*.ocf MultiBUGS-binary/Code
-      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Cons/*.ocf MultiBUGS-binary/Cons
+      cp -r ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Cons/Code/*.ocf MultiBUGS-binary/Cons/Code
       cp -r Form/Code/*.ocf MultiBUGS-binary/Form/Code
       cp -r Host/Code/*.ocf MultiBUGS-binary/Host/Code
-      cp -r Lin/Code/*.ocf MultiBUGS-binary/Lin/Code
-      cp -r Ole/Code/*.ocf MultiBUGS-binary/Ole/Code
+      #cp -r Lin/Code/*.ocf MultiBUGS-binary/Lin/Code
+      #cp -r Ole/Code/*.ocf MultiBUGS-binary/Ole/Code
       cp -r Std/Code/*.ocf MultiBUGS-binary/Std/Code
-      cp -r System/Code/*.ocf MultiBUGS-binary/System/Code
+      #cp -r System/Code/*.ocf MultiBUGS-binary/System/Code
       cp -r Text/Code/*.ocf MultiBUGS-binary/Text/Code
-      cp -r Win/Code/*.ocf MultiBUGS-binary/Win/Code
+      #cp -r Win/Code/*.ocf MultiBUGS-binary/Win/Code
       cp -r Xhtml/Code/*.ocf MultiBUGS-binary/Xhtml/Code
       cp -r Dev2/Code/*.ocf MultiBUGS-binary/Dev2/Code
       cp -r Gtk2/Code/*.ocf MultiBUGS-binary/Gtk2/Code
@@ -165,9 +165,9 @@ jobs:
       cp -r Deviance/Code/*.ocf MultiBUGS-binary/Deviance/Code
       cp -r Diff/Code/*.ocf MultiBUGS-binary/Diff/Code
       cp -r Doodle/Code/*.ocf MultiBUGS-binary/Doodle/Code
-      cp -r Dynamic/Code/*.ocf MultiBUGS-binary/Dynamic/Code
+      #cp -r Dynamic/Code/*.ocf MultiBUGS-binary/Dynamic/Code
       cp -r Graph/Code/*.ocf MultiBUGS-binary/Graph/Code
-      cp -r Html/Code/*.ocf MultiBUGS-binary/Html/Code
+      #cp -r Html/Code/*.ocf MultiBUGS-binary/Html/Code
       cp -r Maps/Code/*.ocf MultiBUGS-binary/Maps/Code
       cp -r Math/Code/*.ocf MultiBUGS-binary/Math/Code
       cp -r Models/Code/*.ocf MultiBUGS-binary/Models/Code
