--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -264,7 +264,9 @@ jobs:
       tar -czf binary.tar.gz MultiBUGS-binary/
       cd MultiBUGS-binary
       #mpiexec.mpich -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR script.txt &
-      DISPLAY=:99 mpiexec.mpich -n 1 ./OpenBUGS /PAR script.txt &
+      #worked
+      #DISPLAY=:99 mpiexec.mpich -n 1 ./OpenBUGS /PAR script.txt &
+      ./MultiBUGS /PAR script.txt
       #mpiexec -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox &
       sleep 100
       ls
