--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -79,8 +79,9 @@ jobs:
       sudo add-apt-repository -y "deb https://cloud.r-project.org/bin/linux/ubuntu $(lsb_release -sc)-cran35/"
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9
       sudo apt-get update
-      sudo apt-get install r-base libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
-      sudo apt-get install r-base-dev g++-multilib mpich:i386
+      sudo apt-get -f install
+      sudo apt-get install r-base libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full mpich:i386
+      sudo apt-get install r-base-dev g++-multilib
       # mpich installs libmpich12 which supplies libmpich.so.12
       #sudo apt-get install 
       # for building MultiBUGS.cpp
