try r-cran-tidyverse

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -209,8 +209,9 @@ jobs:
   - script: |
       # needed for devtools
       sudo apt-get update
-      sudo apt-get install libcurl4-openssl-dev libssl-dev libgit2-dev libssh2-1-dev
-      Rscript -e "install.packages(c(\"devtools\", \"xml2\"), repos=\"https://cloud.r-project.org\", Ncpus = 2)" -e "devtools::install_github(c(\"MultiBUGS/R2MultiBUGS\", \"MultiBUGS/multibugstests\"), threads = 2)"
+      sudo apt-get install r-cran-tidyverse
+      #Rscript -e "install.packages(c(\"devtools\", \"xml2\"), repos=\"https://cloud.r-project.org\", Ncpus = 2)"
+      Rscript -e "devtools::install_github(c(\"MultiBUGS/R2MultiBUGS\", \"MultiBUGS/multibugstests\"), threads = 2)"
     displayName: Install R packages
   - script: |
       Xvfb :99 -screen 0 1024x768x24 </dev/null &
