--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -78,7 +78,7 @@ jobs:
       sudo dpkg --add-architecture i386
       sudo add-apt-repository -y "deb https://cloud.r-project.org/bin/linux/ubuntu $(lsb_release -sc)-cran35/"
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9
-      sudo apt-get update
+      sudo apt-fast update
       sudo apt-fast install -y libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
       sudo apt-fast install -y mpich:i386
       sudo apt-fast install -y r-base r-base-dev
@@ -210,9 +210,9 @@ jobs:
     displayName: Build MultiBUGS
   - script: |
       # needed for devtools
-      sudo apt-get update
-      sudo apt-get install libcurl4-openssl-dev libssl-dev
-      sudo apt-get install libgit2-dev libssh2-1-dev
+      sudo apt-fast update
+      sudo apt-fast install libcurl4-openssl-dev libssl-dev
+      sudo apt-fast install libgit2-dev libssh2-1-dev
       Rscript -e "install.packages(c(\"devtools\", \"xml2\"), repos=\"https://cloud.r-project.org\", Ncpus = 4)" -e "devtools::install_github(c(\"MultiBUGS/R2MultiBUGS\", \"MultiBUGS/multibugstests\"), threads = 4)"
     displayName: Install R packages
   - script: |
