--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -81,7 +81,7 @@ jobs:
       sudo apt-fast update
       sudo apt-fast install -y libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
       sudo apt-fast install -y r-base r-base-dev
-      sudo apt-fast install -y mpich:i386
+      sudo apt-get install -y mpich:i386
       sudo apt-fast install -y g++-multilib
       # mpich installs libmpich12 which supplies libmpich.so.12
       #sudo apt-get install 
