--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -70,23 +70,21 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  #- script: |
-  #    # Uninstalling these packages is NOT needed for MultiBUGS, but vastly speeds up apt-get update on Azure
-  #    sudo apt-get -qq remove '^libmono.*' '^mono.*' '^php.*'
-  #  displayName: Uninstall unnecessary packages
+  - script: |
+      # Uninstalling these packages is NOT needed for MultiBUGS, but vastly speeds up apt-get update on Azure
+      sudo apt-get -qq remove '^libmono.*' '^mono.*' '^php.*'
+    displayName: Uninstall unnecessary packages
   - script: |
       sudo dpkg --add-architecture i386
       sudo add-apt-repository -y "deb https://cloud.r-project.org/bin/linux/ubuntu $(lsb_release -sc)-cran35/"
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9
-      sudo apt-fast update
-      sudo apt-fast install -y libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
-      sudo apt-fast install -y r-base r-base-dev
-      sudo apt-get install -y mpich:i386
-      sudo apt-fast install -y g++-multilib
+      sudo apt-get -qq -y update
+      sudo apt-get install r-base libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
+      sudo apt-get install r-base-dev
       # mpich installs libmpich12 which supplies libmpich.so.12
-      #sudo apt-get install 
+      sudo apt-get install mpich:i386
       # for building MultiBUGS.cpp
-      #sudo apt-get install 
+      sudo apt-get install g++-multilib
       # By default, R_LIBS_USERS is not set, so need to allow package installation to site-library
       sudo chmod o+w /usr/local/lib/R/site-library
     displayName: Install R, 32-bit MPICH, and 32-bit GTK libraries
@@ -210,9 +208,9 @@ jobs:
     displayName: Build MultiBUGS
   - script: |
       # needed for devtools
-      sudo apt-fast update
-      sudo apt-fast install -y libcurl4-openssl-dev libssl-dev
-      sudo apt-fast install -y libgit2-dev libssh2-1-dev
+      sudo apt-get update
+      sudo apt-get install libcurl4-openssl-dev libssl-dev
+      sudo apt-get install libgit2-dev libssh2-1-dev
       Rscript -e "install.packages(c(\"devtools\", \"xml2\"), repos=\"https://cloud.r-project.org\", Ncpus = 4)" -e "devtools::install_github(c(\"MultiBUGS/R2MultiBUGS\", \"MultiBUGS/multibugstests\"), threads = 4)"
     displayName: Install R packages
   - script: |
@@ -238,6 +236,10 @@ jobs:
     inputs:
       artifactName: 'artifactName'
       targetPath: '$(Build.SourcesDirectory)/MultiBUGS-binary/screenshot.png'
+  - task: PublishPipelineArtifact@0
+    inputs:
+      artifactName: 'Linux MultiBUGS binary'
+      targetPath: '$(Build.SourcesDirectory)/MultiBUGS-binary'
   - task: PublishTestResults@2
     inputs:
       testResultsFiles: 'C:\MultiBUGS\TESTS-*$(WORKERS)workers-$(CHAINS)chains.xml'
